codepkg/objects/Student__c.object
<CustomObject>
    <fields>
        <fullName>Cathedra__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cathedra</label>
        <referenceTo>Cathedra__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Faculty__c</fullName>
        <label>Faculty</label>
        <referenceTo>Faculty__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group</label>
        <referenceTo>Group__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SizeOfScholarship__c</fullName>
        <label>SizeOfScholarship</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Speciality__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Speciality</label>
        <referenceTo>Specialty__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StudyCost__c</fullName>
        <label>StudyCost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>University__c</fullName>
        <label>University</label>
        <referenceTo>University__c</referenceTo>
        <relationshipLabel>Students</relationshipLabel>
        <relationshipName>Students</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Student</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Student Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <recordTypes>
        <fullName>FreeStudent</fullName>
        <active>true</active>
        <label>FreeStudent</label>
    </recordTypes>
    <recordTypes>
        <fullName>PayerStudent</fullName>
        <active>true</active>
        <label>PayerStudent</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>